--- a/index.html
+++ b/index.html
@@ -57,25 +57,25 @@
                 <p class="section-subtitle">Explore our comprehensive range of 3d printing - general platform solutions</p>
                 <div class="services-grid">
                 <div class="service-card">
-                    <img src="https://images.unsplash.com/photo-1769697705387-591bfddc2861?w=600&q=80" alt="Service" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
+                    <img src="https://images.unsplash.com/photo-1624841970647-87dce8628d72?w=600&q=80" alt="Online 3D Printing" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
                     <h3>Online 3D Printing</h3>
                     <p>Easy-to-use online platform for uploading designs and ordering professional 3D prints.</p>
                     <a href="services.html" class="card-link">Learn More</a>
                 </div>
                 <div class="service-card">
-                    <img src="https://images.unsplash.com/photo-1769697705387-591bfddc2861?w=600&q=80" alt="Service" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
+                    <img src="https://images.unsplash.com/photo-1557243962-0a093922933f?w=600&q=80" alt="Material Library" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
                     <h3>Material Library</h3>
                     <p>Extensive selection of 3D printing materials including plastics, metals, ceramics, and composites.</p>
                     <a href="services.html" class="card-link">Learn More</a>
                 </div>
                 <div class="service-card">
-                    <img src="https://images.unsplash.com/photo-1769697705387-591bfddc2861?w=600&q=80" alt="Service" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
+                    <img src="https://images.unsplash.com/photo-1557243962-0a093922933f?w=600&q=80" alt="Design Marketplace" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
                     <h3>Design Marketplace</h3>
                     <p>Browse and purchase ready-to-print 3D designs from our curated marketplace.</p>
                     <a href="services.html" class="card-link">Learn More</a>
                 </div>
                 <div class="service-card">
-                    <img src="https://images.unsplash.com/photo-1769697705387-591bfddc2861?w=600&q=80" alt="Service" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
+                    <img src="https://images.unsplash.com/photo-1563520240533-66480a3916fe?w=600&q=80" alt="Enterprise Solutions" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
                     <h3>Enterprise Solutions</h3>
                     <p>Scalable 3D printing solutions for businesses with API integration and volume pricing.</p>
                     <a href="services.html" class="card-link">Learn More</a>
